--- a/facebook.html
+++ b/facebook.html
@@ -10,7 +10,7 @@
 <body>
     <div class="profile">
         <div class="photo">
-            <img src="d:\Photos_All\Glory Photos\IMG_20250201_121822_883~2.jpg" alt="profile unavailable">
+            <img src="d:\nature\OIP.jfif" alt="profile unavailable">
             <p>Glory Chipungu</p>
             <div class="mutual">
                 <div class="image">
